center align on setup page issue

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@
 }
 .actor__content--typing::after {
     content: '|';
-    -webkit-animation: blink 500ms infinite;
     animation: blink 500ms infinite;
 }
 
